--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,37 @@
 }
 
 .home h2 {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+  width: 300px;
+}
+
+.input-box label {
+  text-align: left;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+}
+
+.input-box input {
+  padding: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid grey;
+  border-radius: 4px;
+}
+
+.home .code-input {
+  text-transform: uppercase;
 }
 
 .home button {
@@ -153,49 +183,6 @@
 }
 
 /* UserView */
-
-.lobby {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 2rem;
-
-}
-
-.input-box {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1.5rem;
-  width: 300px;
-}
-
-.input-box label {
-  text-align: left;
-  margin-bottom: 0.5rem;
-  font-weight: 500;
-}
-
-.input-box input {
-  padding: 0.5rem;
-  font-size: 1rem;
-  border: 1px solid grey;
-  border-radius: 4px;
-}
-
-.lobby button {
-  display: block;
-  margin: 1.875rem auto;
-  width: 15rem;
-  font-size: 1.6rem;
-  padding: 0.7em 1.2em;
-  border-radius: 0.5rem;
-  border: 1px solid transparent;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
 
 .spinner {
   margin: 20px 0;
