--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,13 +10,14 @@
 }
 
 .home h1 {
-  font-size: 100px;
-  margin-bottom: 50px;
+  font-size: 3rem;
   line-height: 1.1;
+  margin-bottom: 0px;
 }
 
 .home h2 {
-  margin-bottom: 50px;
+  font-size: 1.5rem;
+  margin-bottom: 3rem;
 }
 
 .form {
@@ -39,10 +40,10 @@
 }
 
 .input-box input {
-  padding: 0.5rem;
+  padding: 0.75rem;
   font-size: 1rem;
-  border: 1px solid grey;
-  border-radius: 4px;
+  border: 0px;
+  border-radius: 0.75rem;
 }
 
 .home .code-input {
@@ -51,17 +52,30 @@
 
 .home button {
   display: block;
-  margin: 1.875rem auto;
+  text-align: center;
   width: 18.75rem;
   font-size: 1.6rem;
   padding: 0.7em 1.2em;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   border: 1px solid transparent;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+}
+
+.host-div {
+  height: 15vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.host-div h2 {
+  font-weight: 500;
+  margin-bottom: 1rem;
 }
 
 /* HostView */
