--- a/client/src/App.css
+++ b/client/src/App.css
@@ -87,14 +87,16 @@
 .current {
   position: fixed;
   top: 0;
+  left: 5vw;
   font-size: 0.8rem;
-  border: 1px solid red;
   display: flex;
+  height: 5vh;
+  align-items: center;
 }
 
 .current .song {
   position: fixed;
-  left: 5vw;
+  left: 5.5vw;
   width: 45%;
   overflow: hidden;
   white-space: nowrap;
@@ -103,7 +105,7 @@
 
 .current .singer {
   position: fixed;
-  right: 5vw;
+  right: 5.5vw;
   width: 40%;
   text-align: right;
   overflow: hidden;
@@ -116,11 +118,11 @@
   display: flex;
   flex-direction: column;
   position: fixed;
-  top: 4vh;
+  top: 5vh;
   left: 5vw;
   z-index: -1;
   width: 90vw;
-  height: 89vh;
+  height: 88vh;
   overflow: hidden;
   text-align: center;
   justify-content: center;
@@ -184,7 +186,7 @@
 }
 
 .queue-info {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   width: 20%;
   text-align: center;
   display: flex;
@@ -210,7 +212,8 @@
   cursor: pointer;
   font-family: inherit;
   font-weight: 600;
-  margin-top: 0.5rem;
+  margin-top: 0.25rem;
+  font-size: 0.7rem;
 }
 .queue-info button:hover {
   background: #445ba0;
